--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ticketing",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "engines": {
     "node": ">=16.14.0"
@@ -9,10 +9,12 @@
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "echo 123",
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
