--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
+    "prisma": "^3.10.0",
     "typescript": "^4.5.5"
   }
 }
