--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ticketing",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "license": "MIT",
   "engines": {
     "node": ">=16.14.0"
@@ -9,14 +9,21 @@
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "echo 123",
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/server.ts"
+    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "db:pull": "npx prisma db pull",
+    "db:push": "npx prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^3.10.0",
+    "body-parser": "^1.19.2",
+    "connect-timeout": "^1.9.0",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
+    "express-promise-router": "^4.1.1",
     "graphql": "^16.3.0"
   },
   "devDependencies": {
+    "@types/connect-timeout": "^0.0.36",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.19",
