--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,5 @@
     "**/node_modules": true,
     "**/dist": true
   },
-  "cSpell.words": ["builtins"]
+  "cSpell.words": ["builtins", "sleepms"]
 }
