--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB (Preview) and CockroachDB (Preview).
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://ygtx2021:YgTx_2021@rm-8vbh08jh15119j88vso.mysql.zhangbei.rds.aliyuncs.com:3306/ticketing"
+DATABASE_URL="mysql://root:1q2w3e4r5t@127.0.0.1:3306/ticketing"
+REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD="1q2w3e4r5t"
+SERVICE_PORT=3000
