--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "echo 123",
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "init:data": "ts-node ./src/init.ts",
     "db:pull": "npx prisma db pull",
     "db:push": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^3.10.0",
+    "@prisma/client": "3.10.0",
     "body-parser": "^1.19.2",
     "connect-timeout": "^1.9.0",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "express-promise-router": "^4.1.1",
-    "graphql": "^16.3.0"
+    "express-validator": "^6.14.0",
+    "graphql": "^16.3.0",
+    "redis": "^4.0.4",
+    "underscore": "^1.13.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/connect-timeout": "^0.0.36",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^17.0.19",
+    "@types/underscore": "^1.11.4",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.1.0",
