--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://root:1q2w3e4r5t@127.0.0.1:3306/ticketing"
+DATABASE_URL="mysql://root:1q2w3e4r5t@localhost:3306/ticketing"
 REDIS_URL="redis://localhost:6379"
 REDIS_PASSWORD="1q2w3e4r5t"
 SERVICE_PORT=3000
