--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "private": true,
   "engines": {
     "node": ">=16.14.0"
   },
@@ -22,7 +23,7 @@
     "express-graphql": "^0.12.0",
     "express-promise-router": "^4.1.1",
     "express-validator": "^6.14.0",
-    "graphql": "^16.3.0",
+    "graphql": "^15.3.0",
     "redis": "^4.0.4",
     "underscore": "^1.13.2",
     "uuid": "^8.3.2"
