--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
-    "test": "echo 123",
+    "test": "mocha -r ts-node/register src/test/*.spec.ts --exit",
+    "test:docker:up": "docker-compose -f integration/docker-compose.yml up -d",
+    "test:docker:down": "docker-compose -f integration/docker-compose.yml down",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
     "init:data": "ts-node ./src/init.ts",
     "db:pull": "npx prisma db pull",
@@ -29,21 +32,50 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/connect-timeout": "^0.0.36",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.19",
     "@types/underscore": "^1.11.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^9.2.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "prisma": "^3.10.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "src/**/test/**/*.ts",
+      "src/**/*.spec.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
   }
 }
