add unit test service 0.3

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
-    "test": "mocha -r ts-node/register src/test/*.spec.ts --exit",
+    "test": "mocha -r ts-node/register src/test/**/*.spec.ts --exit --timeout 50000",
     "test:docker:up": "docker-compose -f integration/docker-compose.yml up -d",
     "test:docker:down": "docker-compose -f integration/docker-compose.yml down",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
