--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "**/*.spec.ts"],
+  "include": ["src/**/*", "src/**/*.spec.ts"],
   "exclude": ["node_modules", "dist"]
 }
