--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/graphql": "^14.5.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.19",
+    "@types/sinon": "^10.0.11",
     "@types/underscore": "^1.11.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -54,6 +55,8 @@
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
     "prisma": "^3.10.0",
+    "sinon": "^13.0.1",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
