add unit test TicketService 40%

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,7 @@
     "**/node_modules": true,
     "**/dist": true
   },
-  "cSpell.words": ["builtins", "sleepms"]
+  "cSpell.words": ["builtins", "sleepms"],
+  "mochaExplorer.files": "src/**/*.spec.ts",
+  "mochaExplorer.require": "ts-node/register"
 }
