--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "lint": "eslint 'src/**/*.{js,ts}' --fix",
     "test": "mocha -r ts-node/register src/test/**/*.spec.ts --exit --timeout 50000",
-    "test:docker:up": "docker-compose -f integration/docker-compose.yml up -d",
-    "test:docker:down": "docker-compose -f integration/docker-compose.yml down",
+    "test:docker:up": "docker-compose -f docker-compose.yml up -d",
+    "test:docker:down": "docker-compose -f docker-compose.yml down",
     "coverage": "yarn nyc --reporter lcov yarn test",
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
     "init:data": "ts-node ./src/init.ts",
